retrieving entrance history fixed
